[package]
name = "loose-dms"
version = "0.1.1"
edition = "2021"
authors = ["Carter Harrison"]
description = "Parse geographical coordinates from strings in DMS or decimal format"
license = "MIT"
repository = "https://github.com/carterharrison/loose-dms"
keywords = ["geography", "coordinates", "dms", "parsing"]
categories = ["science", "science::geo", "parser-implementations"]

[dependencies]
thiserror = "1.0.64"
regex = "1.11.1"
lazy_static = "1.5.0"
